# nos-playground

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
deployments/deploy-llms-with-skypilot/: app  deployment-mixtral.sky.yaml  deployment-phixtral.sky.yaml  deployment-tinyllama.sky.yaml  service-mixtral.sky.yaml  service-phixtral.sky.yaml  skypilot.serve.yaml
examples/animate-diff/: example.ipynb  serve.yaml
examples/animate-diff/models/: model.py
examples/animate-diff/tests/: test.py
examples/bark/: README.md  example.ipynb  serve.yaml
examples/bark/models/: model.py
examples/bark/tests/: test.py
examples/dream-gaussian/: README.md  example.ipynb  serve.yaml
examples/dream-gaussian/models/: model.py
examples/dream-gaussian/tests/: test.py
examples/embeddings-inf2/: job-inf2-embeddings-deployment.yaml
examples/gte/: README.md  serve.yaml
examples/kosmos-2/: README.md  serve.yaml
examples/kosmos-2-patch14-224/: README.md  serve.yaml
examples/kosmos2/: README.md  serve.yaml
examples/latent-consistency-model/: config.yaml  serve.yaml
examples/llama2-chat/: .env.template  README.md  serve.yaml
examples/llm-function-calling/: 00-json-response-example.py  01-function-call-basic.py  README.md  serve.outlines.yaml  serve.yaml
examples/llm-streaming-chat/: README.md  serve.mixtral.yaml  serve.multiple.yaml  serve.phixtral.yaml  serve.tinyllama.yaml  serve.yaml
examples/music-gen/: README.md  example.ipynb  serve.yaml
examples/mvdream/: README.md  serve.yaml
examples/playground-v2/: README.md  example.ipynb  serve.yaml
examples/sdxl-turbo/: README.md  serve.yaml
examples/stable-diffusion-XL-turbo/: README.md  serve.yaml
examples/stable-video-diffusion/: README.md  serve.yaml
examples/whisperx/: serve.yaml  youtube_pipeline.ipynb  youtube_whisperx_transcription.ipynb
integrations/fly/: README.md  fly.toml
integrations/nos-fly/: README.md  fly.toml
(+33 files in other folders)
